support JDK-21